# VLMScoreEngine

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  score_models.py
config/: __init__.py  scoring_config.py
model_scoring/: __init__.py  csv_reporter.py  run_scoring.py
model_scoring/core/: __init__.py  constants.py  exceptions.py  types.py
model_scoring/data/: __init__.py  loaders.py  validators.py
model_scoring/scoring/: __init__.py  hf_score.py  models_scoring.py
model_scoring/utils/: __init__.py  config_loader.py  logging.py
tests/: __init__.py  test_run_scoring.py
tests/config/: test_scoring_config.py
tests/data/: __init__.py  test_loaders.py  test_validators.py
tests/scoring/: test_hf_score.py  test_models_scoring.py
tests/utils/: __init__.py  test_config_loader.py
