[project]
name = "VLM-Scoring-Engine"
version = "0.1.0"
description = "A comprehensive system for evaluating and scoring Vision language models based on multiple criteria."
dependencies = [
    "typing_extensions>=4.0.0",
    "argparse>=1.4.0",
    "huggingface-hub>=0.20.0"
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
] 

[tool.hatch.build.targets.wheel]
packages = ["model_scoring"] 
